# WaveFunctionCollapse

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main_no_parallel.cpp  main_omp.cpp  main_pattern_caching.cpp  main_pattern_weight.cpp  main_seq_Q.cpp  measure_performance.ps1
